fix: new XSS resolver.